buildscript {
	ext {
		set('errorproneVersion', "2.24.0")
	}
}

plugins {
	id 'java'
}

//compileJava {
//	options.compilerArgs << '--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
//	<< '--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
//			<< '--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
//			<< '--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
//			<< '--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
//}

group = 'uk.co.cjolive'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {

	implementation("com.google.errorprone:error_prone_annotation:$errorproneVersion")
	implementation("com.google.errorprone:error_prone_check_api:$errorproneVersion")
	implementation("com.google.auto.service:auto-service-annotations:1.1.1")

	annotationProcessor 'com.google.auto.service:auto-service:1.0.1'

}

configurations {
	instrumentedJars {
		canBeConsumed = true
		canBeResolved = false
	}
}

artifacts {
	instrumentedJars(jar)
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += [
			"--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED",
	]
}